Update package.json for custom publish

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "pdfjs-dist",
+  "name": "@teachiq/pdfjs-dist",
   "version": "2.16.105",
   "main": "build/pdf.js",
+  "publishConfig": {
+    "access": "restricted",
+    "registry": "https://npm.pkg.github.com/"
+  },
   "types": "types/src/pdf.d.ts",
   "description": "Generic build of Mozilla's PDF.js library.",
   "keywords": [
@@ -35,6 +39,6 @@
   "format": "amd",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mozilla/pdfjs-dist"
+    "url": "https://github.com/Teachiq/pdfjs-dist"
   }
 }
